# sales-network

./: .env.sample  README.md  pyproject.toml  sales.json  users.json
config/: settings.py  urls.py
sales/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_user.py  csu.py
